--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "latex-utilities",
-    "displayName": "LaTeX Utilities",
+    "name": "josiah-latex-utilities",
+    "displayName": "Josiah LaTeX Utilities",
     "description": "An add-on to LaTeX Workshop that provides some fancy features that are less vital to the basic experience editing a LaTeX document, but can be rather nice to have.",
     "icon": "icon.png",
     "version": "0.4.11",
@@ -32,90 +32,90 @@
     "contributes": {
         "commands": [
             {
-                "command": "latex-utilities.editLiveSnippetsFile",
+                "command": "josiah-latex-utilities.editLiveSnippetsFile",
                 "title": "Edit Live Snippets file",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             },
             {
-                "command": "latex-utilities.resetLiveSnippetsFile",
+                "command": "josiah-latex-utilities.resetLiveSnippetsFile",
                 "title": "Reset Live Snippets file",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             },
             {
-                "command": "latex-utilities.compareLiveSnippetsFile",
+                "command": "josiah-latex-utilities.compareLiveSnippetsFile",
                 "title": "Compare user Live Snippets file to default",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             },
             {
-                "command": "latex-utilities.formattedPaste",
+                "command": "josiah-latex-utilities.formattedPaste",
                 "title": "Paste formatted content",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             },
             {
-                "command": "latex-utilities.citeZotero",
+                "command": "josiah-latex-utilities.citeZotero",
                 "title": "Cite from Zotero",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             },
             {
-                "command": "latex-utilities.openInZotero",
+                "command": "josiah-latex-utilities.openInZotero",
                 "title": "Open in Zotero",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             },
             {
-                "command": "latex-utilities.selectWordcountFormat",
+                "command": "josiah-latex-utilities.selectWordcountFormat",
                 "title": "Select wordcount format",
-                "category": "LaTeX Utilities"
+                "category": "Josiah LaTeX Utilities"
             }
         ],
         "keybindings": [
             {
                 "key": "ctrl+shift+v",
                 "mac": "cmd+shift+v",
-                "command": "latex-utilities.formattedPaste",
-                "when": "!config.latex-utilities.formattedPaste.useAsDefault && editorTextFocus && editorLangId == 'latex'"
+                "command": "josiah-latex-utilities.formattedPaste",
+                "when": "!config.josiah-latex-utilities.formattedPaste.useAsDefault && editorTextFocus && editorLangId == 'latex'"
             },
             {
                 "key": "ctrl+v",
                 "mac": "cmd+v",
-                "command": "latex-utilities.formattedPaste",
-                "when": "config.latex-utilities.formattedPaste.useAsDefault && editorTextFocus && editorLangId == 'latex'"
+                "command": "josiah-latex-utilities.formattedPaste",
+                "when": "config.josiah-latex-utilities.formattedPaste.useAsDefault && editorTextFocus && editorLangId == 'latex'"
             }
         ],
         "configuration": {
-            "title": "LaTeX Utils",
+            "title": "Josiah LaTeX Utils",
             "properties": {
-                "latex-utilities.formattedPaste.tableColumnType": {
+                "josiah-latex-utilities.formattedPaste.tableColumnType": {
                     "type": "string",
                     "default": "l",
                     "markdownDescription": "Tabular column type to use, e.g. **`l`**/**`r`**/**`c`**…"
                 },
-                "latex-utilities.formattedPaste.tableBooktabsStyle": {
+                "josiah-latex-utilities.formattedPaste.tableBooktabsStyle": {
                     "type": "boolean",
                     "default": true,
                     "markdownDescription": "Use the booktabs commands `\\toprule`, `\\midrule`, and `\\bottomrule`"
                 },
-                "latex-utilities.formattedPaste.tableHeaderRows": {
+                "josiah-latex-utilities.formattedPaste.tableHeaderRows": {
                     "type": "integer",
                     "default": 1,
                     "markdownDescription": "Number of header rows to assume. Set to **`0`** to disable."
                 },
-                "latex-utilities.formattedPaste.customTableDelimiter": {
+                "josiah-latex-utilities.formattedPaste.customTableDelimiter": {
                     "type": "string",
                     "default": "\t",
                     "minLength": 1,
                     "markdownDescription": "A custom delimiter to try for tables (in addition to `\\t`, `,` and `|` which we always try)"
                 },
-                "latex-utilities.formattedPaste.tableDelimiterPrompt": {
+                "josiah-latex-utilities.formattedPaste.tableDelimiterPrompt": {
                     "type": "boolean",
                     "default": false,
                     "markdownDescription": "Whether to be prompted for a custom delimiter if the set table delimiters didn't work"
                 },
-                "latex-utilities.formattedPaste.maxLineLength": {
+                "josiah-latex-utilities.formattedPaste.maxLineLength": {
                     "type": "integer",
                     "default": 80,
                     "markdownDescription": "Try to fit within the given line length"
                 },
-                "latex-utilities.formattedPaste.image.template": {
+                "josiah-latex-utilities.formattedPaste.image.template": {
                     "type": [
                         "string",
                         "array"
@@ -123,67 +123,67 @@
                     "default": "\\includegraphics{${imageFilePath}}",
                     "markdownDescription": "The template to use for pasting the image (use an array for multiline strings), use `${imageFilePath}` to represent the image file. Can also use `${imageFileNameWithoutExt}`"
                 },
-                "latex-utilities.formattedPaste.imagePathOverride": {
+                "josiah-latex-utilities.formattedPaste.imagePathOverride": {
                     "type": "string",
                     "default": "",
                     "markdownDescription": "Override the image path to use for the image template. If empty, the path will be read automatically from the source file. You can use ${currentFileDir} to represent the current source file dir."
                 },
-                "latex-utilities.formattedPaste.useAsDefault": {
+                "josiah-latex-utilities.formattedPaste.useAsDefault": {
                     "type": "boolean",
                     "default": false,
                     "markdownDescription": "Make `ctrl`+`v` perform a formatted paste, and `ctrl`+`shift`+`v` perform a 'raw' (normal) paste."
                 },
-                "latex-utilities.liveReformat.enabled": {
+                "josiah-latex-utilities.liveReformat.enabled": {
                     "type": "boolean",
                     "default": false,
                     "markdownDescription": "Apply live text replacements to make writing latex maths easier (e.g. `xx` → `\\times`). Also see the command \"Edit Live Snippets File\""
                 },
-                "latex-utilities.countWord.path": {
+                "josiah-latex-utilities.countWord.path": {
                     "type": "string",
                     "default": "texcount",
-                    "markdownDescription": "Define the location of TeXCount executive file/script.\nThis command will be joint with `latex-utilities.countWord.args` and required arguments to form a complete command of TeXCount."
+                    "markdownDescription": "Define the location of TeXCount executive file/script.\nThis command will be joint with `josiah-latex-utilities.countWord.args` and required arguments to form a complete command of TeXCount."
                 },
-                "latex-utilities.countWord.docker.enabled": {
+                "josiah-latex-utilities.countWord.docker.enabled": {
                     "type": "boolean",
                     "default": false,
                     "markdownDescription": "Use Docker to run TeXCount. This requires Docker to be installed and running. We will use docker config from LaTeX-Workshop."
                 },
-                "latex-utilities.countWord.args": {
+                "josiah-latex-utilities.countWord.args": {
                     "type": "array",
                     "default": [],
                     "markdownDescription": "TeXCount arguments to count words in LaTeX document of the entire project from the root file, or the current document.\nArguments must be in separate strings in the array. Additional arguments, i.e., `-merge %DOC%` for the project and the current document path for counting current file will be appended when constructing the command."
                 },
-                "latex-utilities.countWord.format": {
+                "josiah-latex-utilities.countWord.format": {
                     "type": "string",
                     "default": "${words} Words",
                     "markdownDescription": "Format of the statusbar item. Set empty (`\"\"`) to disable."
                 },
-                "latex-utilities.message.update.show": {
+                "josiah-latex-utilities.message.update.show": {
                     "type": "boolean",
                     "default": "true",
                     "markdownDescription": "Notify you when the extension updates"
                 },
-                "latex-utilities.message.error.show": {
+                "josiah-latex-utilities.message.error.show": {
                     "type": "boolean",
                     "default": "true",
                     "markdownDescription": "Show error messages"
                 },
-                "latex-utilities.texdef.enabled": {
+                "josiah-latex-utilities.texdef.enabled": {
                     "type": "boolean",
                     "default": "true",
                     "markdownDescription": "Use `texdef` to find definitions for LaTeX macros"
                 },
-                "latex-utilities.zotero.zoteroUrl": {
+                "josiah-latex-utilities.zotero.zoteroUrl": {
                     "type": "string",
                     "default": "http://localhost:23119",
                     "markdownDescription": "URL for the Zotero HTTP server"
                 },
-                "latex-utilities.zotero.latexCommand": {
+                "josiah-latex-utilities.zotero.latexCommand": {
                     "type": "string",
                     "default": "autocite",
                     "markdownDescription": "LaTeX citation command to use (`cite`, `parencite`, `autocite`, etc.)"
                 },
-                "latex-utilities.zotero.citeMethod": {
+                "josiah-latex-utilities.zotero.citeMethod": {
                     "type": "string",
                     "enum": [
                         "zotero",
